# USA

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cli.py  main_menu.py  pyproject.toml  run_menu.bat  simulation_state.json
.github/workflows/: python-ci.yml
config/: events.json  policies.json
examples/: __init__.py  __main__.py  config_demo.py  manual_demo.py  simulation_demo.py  snapshot_demo.py
tests/: test_edge_cases.py  test_smoke.py
usa/: __init__.py  config.py  main.py  models.py
