[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usa-sim"
version = "0.1.0"
description = "Turn-based political simulation of the United States (backend prototype)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "", email = "" }]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["usa", "examples"]
