[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usa-sim"
version = "0.1.0"
description = "Turn-based political simulation of the United States (backend prototype)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Tyler Huffaker", email = "" }]
requires-python = ">=3.10"
optional-dependencies = { dev = [ "pytest>=7.0.0", "mypy>=0.981", "ruff>=0.0.260", "flake8>=5.0.0", "black>=22.0.0", "isort>=5.0.0" ] }
[tool.black]
# Code formatter settings
line-length = 88
target-version = ["py310"]

[tool.isort]
# Import sorting settings
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["usa", "config", "examples", "tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["usa", "examples"]

[tool.ruff]
# Use Ruff for fast linting
line-length = 88
select = ["E", "F", "I", "B", "Q"]

[tool.flake8]
# Flake8 configuration
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
# Mypy type checking
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
